# dfs-core

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cargo_update_git.sh  db.sql  docker-compose.yml  generate_selfsigned_cert.sh  load_test.sh  load_test_payload.json  local_setup.sh  setup.sh  setup_bare_ubuntu.sh  setup_ec2.sh  setup_ubuntu.sh  start.sh
.github/workflows/: devskim.yml  rust-clippy.yml
.run/: Run.run.xml
dfs-ml/: .gitignore  Cargo.toml
dfs-ml/src/: bert.rs  cluster.rs  lib.rs  neo.rs  svm.rs
examples/: dialogs.yml
scripts/local/: build.sh  clone_ui.sh  pull_ui.sh  start_api.sh  start_ui.sh
scripts/release/: build.sh  build_dkr.sh  cmd
src/: chat_app.rs  config.rs  core.rs  main.rs  token.rs
src/ml/: bert.rs  mod.rs
src/openai/: isla.rs  mod.rs
src/utils/: token.rs  utilities.rs
tests/: core.rs
ui/: Dockerfile  app.json  package-lock.json  package.json
ui/src/components/JsonEditor/: index.tsx
ui/src/constants/: Layout.ts
ui/src/screens/: NotFoundScreen.tsx  TabOneScreen.tsx
