[package]
name = "dfs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "dfs"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
chrono-tz = { version = "0.6", features = ["serde"] }
regex = "1.6"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.9"
tokio = { version = "1.21", features = ["full"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1"
colored = "2"
lazy_static = "1.4"
reqwest = { verison = "0.11", features = ["json"] }
futures = "0.3"

#https://doc.rust-lang.org/book/ch16-02-message-passing.html
# internal deps
#resolver = { path = "../resolver" }
#eval-utility = { path = "../eval-utility" }
#inflection-rs = { path = "../inflection-rs" }

eval-utility = { git = "https://github.com/floating-floaties/eval-utility.git" }
resolver = { git = "https://github.com/floating-floaties/resolver.git" }
inflection-rs = { git = "https://github.com/floating-floaties/inflection-rs.git" }
string-utility = { git = "https://github.com/floating-floaties/string-utility.git" }

# web deps
actix = "0.13"
actix-web = { version = "4.2", features = ["openssl"] }
actix-cors = "0.6"
actix-files = "0.6"
actix-web-actors = "4.1"
futures-util = "0.3"
mini-redis = "0.4"
jsonwebtokens-cognito = "0.1"
oauth2 = "4.2"
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
