[package]
name = "dfs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[[bin]]
name = "dfs"
path = "src/main.rs"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
chrono-tz = { version = "0.8", features = ["serde"] }
regex = "1.6"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.10"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
rayon = "1"
colored = "2"
lazy_static = "1.4"
reqwest = { verison = "0.11", features = ["json"] }
futures = "0.3"

# Database
surrealdb = "1.0.0-beta.8"

# Internal deps
dfs-ml = { path = "dfs-ml"}
resolver = { git = "https://github.com/floating-floaties/resolver.git" }
inflection-rs = { git = "https://github.com/floating-floaties/inflection-rs.git" }
eval-utility = { git = "https://github.com/floating-floaties/eval-utility.git" }
string-utility = { git = "https://github.com/floating-floaties/string-utility.git" }

# web deps
openssl = { version = "0.10", features = ["vendored"] }
actix = "0.13"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
actix-web = { version = "4", features = ["openssl"] }
actix-cors = "0.6"
actix-files = "0.6"
actix-web-actors = "4.1"
futures-util = "0.3"
mini-redis = "0.4"
jsonwebtokens-cognito = "0.1"
oauth2 = "4.2"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
