[package]
name = "dfs-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bert = "0.19"

ndarray = { version = "0.15", features = ["rayon", "approx"]}
ndarray-linalg = { version = "0.16.0", optional = true }
ndarray-rand = "0.14"
ndarray-stats = "0.5"
ndarray-csv = "=0.5.1"
ndarray-npy = { version = "0.8", default-features = false }
num-traits = "0.2"
rand_xoshiro = "0.6"
flate2 = "1"
csv = "1"

linfa = { verison = "0.6.0", features = ["serde_crate"] }
linfa-clustering = { verison = "0.6.0", features = ["serde_crate"] }
linfa-kernel = { verison = "0.6.0", features = ["serde_crate"] }
linfa-nn = { version = "0.6.0", features = ["serde_crate"] }
linfa-svm = { version = "0.6.0", features = ["serde_crate"] }
linfa-datasets = { version = "0.6.0", features = ["winequality", "iris", "diabetes", "linnerud", "generate"] }
linfa-linalg = { version = "0.1", default-features = false }
